<resources>
    <string name="app_name">AniFox</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="descriptionLogin">We felt your obsence, log in to\ncontinue</string>
    <string name="descriptionAuthCode">Enter code from the website</string>
    <string name="headingLogin">Welcome back\nAnime researcher!</string>
    <string name="buttonLogin">Sign In</string>
    <string name="buttonCode">Get code</string>
    <string name="shikimori_redirect_scheme">shimori</string>
    <string name="shikimori_redirect_host">oauth</string>
    <string name="shikimori_redirect_path">/shikimori</string>
    <string name="auth_canceled">Authentication failed</string>
    <string name="enter_code">Enter code</string>
    <string name="empty_view">Enter your code here from the website</string>
    <string name="popular_anime">Popular anime</string>
    <string name="top_airing">Top Airing</string>
    <string name="most_read">Популярные</string>
    <string name="title_Magic">Магия</string>
    <string name="title_recommendation">Рекомендации</string>
    <string name="title_linked">Связанные</string>
    <string name="most_rated">Популярно сейчас</string>
    <string name="announces">Popular Announces</string>
    <string name="toolbar_manga">Манга</string>
    <string name="toolbar_genre">Жанры</string>
    <string name="discover">Исследуйте</string>
    <string name="morePage">Показать все</string>

    <string name="Genre_Comedy">Комедия</string>
    <string name="Genre_Romance">Романтика</string>
    <string name="Genre_Fantasy">Фэнтези</string>
    <string name="Genre_Horror">Ужасы</string>
    <string name="Genre_Mystic">Мистика</string>
    <string name="Genre_All_Genres">Все жанры</string>
    <string name="Genre_Magic">Магия</string>
    <string name="Genre_Monsters">Монстры</string>
    <string name="Genre_MiddleAges">Средневековье</string>

    <string name="Ranking">Рейтинг</string>
    <string name="Randomize">Найдите свое сокровище</string>
    <string name="completed">Завершено</string>
    <string name="ongoing">Онгоинг</string>
    <string name="popular">Популярно</string>

    <string name="description">Описание</string>
    <string name="overview">Обзор</string>
    <string name="chapters">Главы</string>


    <string name="views">Просмотры</string>
    <string name="comic">comic</string>
    <string name="list">MyList</string>
    <string name="search">SEARCH</string>

    <string name="tab_status_airing">Новинки</string>
    <string name="tab_status_popular">Популярно</string>
    <string name="tab_status_completed">Завершенны</string>
    <string name="Genre_Random">random</string>

    <string name="tab_list_favourite">Избранное</string>
    <string name="tab_list_watching">Смотрю</string>
    <string name="tab_list_onHold">В планах</string>
    <string name="tab_list_completed">Просмотрено</string>


    <string name="welcome_back">С возвращением!</string>
    <string name="welcome_signUp">Добро пожаловать!</string>
    <string name="forgot_password">Забыли пароль ?</string>
    <string name="don_t_have_an_account">У вас нет аккаунта?</string>
    <string name="have_an_account">У вас есть аккаунт?</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="SignInButton">Войти</string>
    <string name="send">Отправить</string>
    <string name="SignUpButton">Зарегистрироваться</string>
    <string name="skip">Пропустить</string>
    <string name="warning_needRegistration">Лисёнок плачет, потому-что вы не можете увидеть то, что находится здесь.\nвам требуется зарегистрироваться по кнопке снизу</string>
    <string name="manga">Manga</string>
    <string name="go_back">Назад</string>
    <string name="reset_email_description">Введите адрес электронной почты, связанный с вашей учетной записью, и мы отправим электронное письмо с инструкциями о том, как сбросить ваш пароль.</string>
    <string name="checkEmail">Проверьте вашу почту</string>
    <string name="emailSuccessMessage">Мы отправили инструкции по восстановлению пароля\nна вашу электронную почту.</string>
    <string name="zeroMess">Не получили письмо? Проверьте папку спам</string>
    <string name="or">или</string>
    <string name="tryAnotherMail">попробуйте другой адресс электронной почты</string>
    <string name="error_mail_not_found">Нет установленного приложения почты</string>
    <string name="choose_email">Выберите приложение почты</string>
    <string name="new_password">Создайте новый пароль</string>
    <string name="new_password_info">Ваш новый пароль должен отличаться от ранее использовавшихся паролей</string>
    <string name="password_confirm_helper">* Оба пароля должны быть одинаковыми</string>
    <string name="password_def_helper">* Должно быть не менее 8 символов</string>
    <string name="require_field">* Обязательное поле</string>
    <string name="require_nicknameSize">* Имя пользователя должно содержать от 4 до 20 символов.</string>
    <string name="require_password">* вам нужно ввести ещё</string>
    <string name="wrong_password">* Неверный логин или пароль</string>
    <string name="require_symbols">символов</string>
    <string name="password_dont_match">* Пароли не совпадают</string>
    <string name="email_wrong">* Неправильный формат почты!</string>
    <string name="little_presentation">Создайте аккаунт, чтобы иметь возможность сохранять историю просмотров, добавлять мангу в избранное и многое другое!</string>
    <string name="save_button_dialog">Сохранить</string>
    <string name="status_dialog_button">Статус</string>
    <string name="progress_dialog_button">Прогресс</string>
    <string name="username_already_registered">* Это имя пользователя недоступно</string>
    <string name="email_already_registered">* Эта почта уже зарегистрирована, если она принадлежит вам, то попробуйте восстановить пароль</string>



</resources>