<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".presentation.signIn.SignInFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextView.HeaderLogin"
            android:text="@string/welcome_back" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextView.Description"
            android:layout_marginTop="8sp"
            android:text="Мы рады снова видеть вас. Вы можете войти и продолжить пользоваться всеми преимуществами приложения!"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailTIL"
            style="@style/TextView.Ranking"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:hint=""
            android:textColorHint="@color/grey_lighter"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/icon_input_email"
            app:startIconTint="@null"
            app:startIconTintMode="multiply">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/search_edit"
                android:hint="example@mail.com"
                android:maxLength="100"
                android:textAppearance="@style/Text.SearchBox" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordTIL"
            style="@style/TextView.Ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint=""
            android:textColorHint="@color/grey_lighter"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:startIconDrawable="@drawable/icon_input_password"
            app:startIconTint="@null"
            app:passwordToggleEnabled="true"
            app:startIconTintMode="multiply">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:background="@drawable/search_edit"
                android:hint="password"
                android:textAppearance="@style/Text.SearchBox" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvForgot"
            style="@style/TextView.SmallerLogin"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:text="@string/forgot_password" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/LoginButton"
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_login"
            android:text="@string/SignInButton"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|center"
        android:id="@+id/llSkip"
        android:layout_marginBottom="80dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextView.CasualLogin"
            android:text="@string/skip"
            android:textSize="24sp" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="30sp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_height="30sp"
            android:src="@drawable/skip"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView
            style="@style/TextView.SmallerLogin"
            android:textColor="@color/grey_lighter"
            android:layout_gravity="center"
            android:text="@string/don_t_have_an_account"/>
        <com.google.android.material.textview.MaterialTextView
            style="@style/TextView.CasualLogin"
            android:id="@+id/tvRegistration"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/registration"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>