<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".presentation.recoveryPassword.ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10sp">

        <LinearLayout
            android:id="@+id/llBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_gravity="center"
                android:src="@drawable/back"
                android:id="@+id/ivBack"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginStart="10sp"
                android:text="@string/go_back"
                android:layout_gravity="center"
                style="@style/TextView.HeaderBack"/>

        </LinearLayout>
        <com.google.android.material.textview.MaterialTextView
            style="@style/TextView.HeaderRecovery"
            android:layout_marginTop="24sp"
            android:textStyle="bold"
            android:text="@string/new_password"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextView.Description"
            android:layout_marginHorizontal="10sp"
            android:layout_marginTop="8sp"
            android:text="@string/new_password_info"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextView.Ranking"
            android:id="@+id/etPasswordTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:textColorHint="@color/grey_lighter"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:layout_margin="10sp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/icon_input_password"
            app:startIconTint="@null"
            app:startIconTintMode="multiply"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperText="@string/password_def_helper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/search_edit"
                android:hint="password"
                android:inputType="textPassword"
                android:textAppearance="@style/Text.SearchBox" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordConfirmTIL"
            style="@style/TextView.Ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint=""
            android:textColorHint="@color/grey_lighter"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/icon_input_password"
            app:startIconTint="@null"
            app:startIconTintMode="multiply"
            app:helperTextEnabled="true"
            app:errorEnabled="true"
            app:helperText="@string/password_confirm_helper">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/search_edit"
                android:hint="password"
                android:inputType="textPassword"
                android:textAppearance="@style/Text.SearchBox" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/LoginButton"
            android:id="@+id/abChangePassword"
            android:layout_marginTop="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:background="@drawable/button_login"
            android:text="Сменить пароль"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>



</LinearLayout>