<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".presentation.recoveryPassword.ResetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10sp">

        <LinearLayout
            android:id="@+id/llBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_gravity="center"
                android:src="@drawable/back"
                android:id="@+id/ivBack"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginStart="10sp"
                android:text="@string/go_back"
                android:layout_gravity="center"
                style="@style/TextView.HeaderBack"/>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextView.HeaderRecovery"
            android:layout_marginTop="40sp"
            android:textStyle="bold"
            android:text="Сброс пароля"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextView.Description"
            android:layout_marginTop="8sp"
            android:layout_marginHorizontal="10sp"
            android:text="@string/reset_email_description"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailTIL"
            style="@style/TextView.Ranking"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="40sp"
            android:hint=""
            android:textColorHint="@color/grey_lighter"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/icon_input_email"
            app:startIconTint="@null"
            app:startIconTintMode="multiply">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/search_edit"
                android:hint="example@mail.com"
                android:maxLength="100"
                android:textAppearance="@style/Text.SearchBox" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/LoginButton"
            android:id="@+id/abSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/button_login"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>



</FrameLayout>